--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,5 +1,7 @@
 .header {
-  background-color: var(--black);
+  position: relative;
+  z-index: 4;
+  padding-top: rem(30);
 
   &__inner {
     display: flex;
@@ -14,5 +16,21 @@
     outline: 1px solid brown;
   }
 
-  &__basket {}
+  &__basket {
+    position: relative;
+
+    & span {
+      position: absolute;
+      top: 0;
+      right: rem(-7);
+      color: var(--white);
+      background-color: var(--accent);
+      width: rem(22);
+      height: rem(28);
+      border-radius: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
 }
