--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@
 @import "./components/tabs-buttons";
 @import "./components/card-product";
 @import "./components/rating";
+@import "./components/experiences";
 // @import "./components/_swiper";
 // @import "./components/swiper-pagination-bullet";
 // @import "./components/_advantages";
@@ -25,13 +26,6 @@
 // @import "./components/_blog";
 // @import "./components/_catalog";
 
-.sl-wrapper .sl-counter {
-  top: 100px;
-}
-
-.sl-wrapper .sl-close {
-  top: 110px;
-}
 
 // .swiper-button-left {
 //   transform: translateX(-41px);
