--- a/scss/components/_bestproduct.scss
+++ b/scss/components/_bestproduct.scss
@@ -1,6 +1,7 @@
 .bestproduct {
   background-color: var(--background);
   text-align: center;
+  padding-top: rem(50);
   padding-bottom: rem(50);
 
   &__title {
