--- a/scss/utils/_vars.scss
+++ b/scss/utils/_vars.scss
@@ -8,6 +8,15 @@
     --background: #f7f7f7;
 
 
+    --font-family: "Gilroy-Medium", sans-serif;
+    --second-family: "Gilroy-Regular", sans-serif;
+    --third-family: "Inter", sans-serif;
+    --font3: "Gilroy-Bold", sans-serif;
+    --font4: "DM Sans", sans-serif;
+    --font5: "Gilroy-SemiBold", sans-serif;
+
+
+
     // --font-family: @extend %Gilroy-500;
     // --second-family: @extend %Gilroy-400;
     // --third-family: @extend %Inter-400;
