--- a/scss/style.css
+++ b/scss/style.css
@@ -6,6 +6,12 @@
   --white-rgba: rgb(255, 255, 255, .8);
   --accent: #e58411;
   --background: #f7f7f7;
+  --font-family: "Gilroy-Medium", sans-serif;
+  --second-family: "Gilroy-Regular", sans-serif;
+  --third-family: "Inter", sans-serif;
+  --font3: "Gilroy-Bold", sans-serif;
+  --font4: "DM Sans", sans-serif;
+  --font5: "Gilroy-SemiBold", sans-serif;
 }
 
 html,
@@ -58,8 +64,10 @@ dd {
 }
 
 body {
+  font-family: "Gilroy", sans-serif;
+  font-weight: 400;
   font-size: 1rem;
-  line-height: 1.85;
+  line-height: 1.2;
   color: var(--black);
   overflow-x: hidden;
   min-width: 100vw;
@@ -95,6 +103,11 @@ button,
   overflow-x: clip;
 }
 
+.flex {
+  display: flex;
+  align-items: center;
+}
+
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -111,6 +124,9 @@ button,
 
 .swiper-button-right,
 .swiper-button-left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: var(--white);
   border-radius: 50%;
   width: 3.125rem;
@@ -119,6 +135,7 @@ button,
   position: absolute;
   top: 36%;
   overflow: visible;
+  box-shadow: 0 7px 20px 0 rgba(0, 0, 0, 0.06);
   transition-duration: 150ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -134,7 +151,7 @@ button,
 }
 
 .swiper-button-right {
-  left: 0.3125rem;
+  left: -1.6875rem;
 }
 
 .swiper-button-left {
@@ -144,12 +161,12 @@ button,
 @font-face {
   font-family: "Gilroy", sans-serif;
   src: url(../fonts/Gilroy-Regular.woff2) format("woff2"), url(../fonts/Gilroy-Regular.woff) format("woff");
-  font-weight: 400;
+  font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
-.tabs-buttons__btn, .search__input, .hero__title, body {
-  font-family: "Gilroy", sans-serif;
+.testimonials__comment-text, .testimonials__comment-name span, .tabs-buttons__btn, .search__input, .hero__title {
+  font-family: "Gilroy";
   font-weight: 400;
 }
 
@@ -160,11 +177,6 @@ button,
   font-style: normal;
   font-display: swap;
 }
-.card-product__name {
-  font-family: "Inter", sans-serif;
-  font-weight: 400;
-}
-
 @font-face {
   font-family: "DMSans", sans-serif;
   src: url(../fonts/DMSans-Regular.woff2) format("woff2"), url(../fonts/DMSans-Regular.woff) format("woff");
@@ -186,12 +198,12 @@ button,
 
 @font-face {
   font-family: "Inter", sans-serif;
-  src: url(../fonts/Inter-SemiBold.woff2) format("woff2"), url(../fonts/Inter-SemiBold.woff) format("woff");
+  src: url(../fonts/Inter-SemiBold.woff2) format("woff2"), url(../fonts/Inter-SemiBold.woff) format("woff"), url(../../fonts/Inter-SemiBold.ttf) format("ttf");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
-.card-product__price, .card-product__title {
+.card-product__price {
   font-family: "Inter", sans-serif;
   font-weight: 600;
 }
@@ -215,9 +227,21 @@ button,
   font-style: normal;
   font-display: swap;
 }
-.section-title, .choosingus__item-title, .hero__descr, .logo {
+.testimonials__comment-name, .section-title, .choosingus__item-title, .hero__descr, .logo {
   font-family: "Gilroy", sans-serif;
   font-weight: 700;
+}
+
+@font-face {
+  font-family: "Gilroy";
+  src: url(../fonts/Gilroy-Regular.woff2) format("woff2"), url(../../fonts/Gilroy-Regular.woff) format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+.testimonials__comment-text, .testimonials__comment-name span, .tabs-buttons__btn, .search__input, .hero__title {
+  font-family: "Gilroy", sans-serif;
+  font-weight: 400;
 }
 
 .container {
@@ -504,6 +528,7 @@ button,
 .bestproduct {
   background-color: var(--background);
   text-align: center;
+  padding-top: 3.125rem;
   padding-bottom: 3.125rem;
 }
 .bestproduct__title {
@@ -609,11 +634,15 @@ button,
 }
 .card-product__name {
   margin-bottom: 0.375rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
   font-size: 1rem;
   color: #8d8d8d;
 }
 .card-product__title {
   margin-bottom: 0.625rem;
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
   font-size: 1.3125rem;
   text-transform: capitalize;
   color: #0d1b39;
@@ -671,15 +700,14 @@ button,
 }
 
 .experiences {
-  padding: 15rem 0;
+  padding: 7.5rem 0;
 }
 .experiences__box {
-  display: flex;
-  align-items: center;
   gap: 5rem;
 }
 .experiences__description {
-  max-width: 34.75rem;
+  max-width: 36.1875rem;
+  padding-right: 3.75rem;
 }
 .experiences__title {
   max-width: 25.8125rem;
@@ -687,4 +715,107 @@ button,
 }
 .experiences__descr {
   margin-bottom: 1.5rem;
+}
+
+.materials__container {
+  max-width: 1440px;
+  padding: 0 0.625rem;
+  margin: 0 auto;
+}
+.materials__box {
+  justify-content: space-between;
+}
+.materials__descr {
+  max-width: 34.75rem;
+}
+.materials__thumb-row2 {
+  align-self: flex-end;
+}
+.materials__img:not(:last-child) {
+  margin-bottom: 0.3125rem;
+}
+
+.testimonials {
+  padding: 7.5rem 0;
+  text-align: center;
+}
+.testimonials__title {
+  margin-bottom: 3.75rem;
+}
+.testimonials__list {
+  max-width: 74.1875rem;
+  margin: 0 auto;
+}
+.testimonials__item {
+  width: 23.125rem;
+  min-height: 31.625rem;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: relative;
+  outline: 0.0625rem solid red;
+}
+.testimonials__item:not(:first-child) {
+  margin-left: 1.1875rem;
+}
+.testimonials__item:not(:last-child) {
+  margin-right: 1.1875rem;
+}
+.testimonials__item::after {
+  content: "";
+  width: 18.75rem;
+  height: 23.75rem;
+  border-radius: 2.8125rem;
+  background: url(../images/testimonial/unsplash-1@1x.png);
+  filter: blur(50px);
+  opacity: 0.4;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.testimonials__item-content {
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 20.875rem;
+  width: 100%;
+  height: 15rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(../images/testimonial/testimonials-bg.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.testimonials__comment-name {
+  display: block;
+  margin-bottom: 1.375rem;
+  font-size: 1.125rem;
+  text-transform: capitalize;
+  color: var(--black);
+  font-style: normal;
+}
+.testimonials__comment-name span {
+  display: block;
+  margin-top: 0.375rem;
+  font-size: 0.75rem;
+  color: rgba(30, 30, 30, 0.6);
+}
+.testimonials__comment-text {
+  margin-bottom: 1.375rem;
+  max-width: 15.75rem;
+  font-size: 0.875rem;
+  color: rgba(30, 30, 30, 0.8);
+}
+.testimonials .rating img {
+  width: 0.875rem;
+}
+.testimonials .swiper-button-right, .testimonials .swiper-button-right {
+  top: 30%;
+}
+.testimonials .swiper-button-right {
+  left: -1.75rem;
 }/*# sourceMappingURL=style.css.map */
