--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,8 @@
 @import "./components/card-product";
 @import "./components/rating";
 @import "./components/experiences";
+@import "./components/materials";
+@import "./components/testimonials";
 // @import "./components/_swiper";
 // @import "./components/swiper-pagination-bullet";
 // @import "./components/_advantages";
