--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,16 +17,8 @@
 @import "./components/experiences";
 @import "./components/materials";
 @import "./components/testimonials";
-// @import "./components/_swiper";
-// @import "./components/swiper-pagination-bullet";
-// @import "./components/_advantages";
-// @import "./components/howdoes";
-// @import "./components/_video";
-// @import "./components/_footer";
-// @import "./components/_important";
-// @import "./components/_contacts";
-// @import "./components/_blog";
-// @import "./components/_catalog";
+@import "./components/_footer";
+
 
 
 // .swiper-button-left {
