--- a/scss/components/_experiences.scss
+++ b/scss/components/_experiences.scss
@@ -1,10 +1,13 @@
 .experiences {
-  padding: rem(120) 0;
+  padding: clamp(3.125rem, 1.696rem + 7.14vw, 7.5rem) 0;
 
   &__box {
-    gap: rem(80);
+    gap: clamp(0.625rem, -13.526rem + 22.8vw, 5rem);
   }
 
+  &__thumb img {
+    width: 100%;
+  }
 
   &__description {
     max-width: rem(579);
@@ -18,5 +21,11 @@
 
   &__descr {
     margin-bottom: rem(24);
+  }
+
+  @media screen and (width < 993.99px) {
+    .flex {
+      flex-wrap: wrap;
+    }
   }
 }
