--- a/scss/components/_card-product.scss
+++ b/scss/components/_card-product.scss
@@ -2,12 +2,15 @@
   width: rem(268);
   background: var(--white);
   position: absolute;
-  bottom: rem(2);
+  // bottom: rem(2);
   // height: rem(441);
   border-radius: 20px;
   text-align: left;
   height: auto;
-  margin-left: rem(7);
+  // margin-left: rem(7);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   &__link {
     border-radius: 20px;
@@ -38,7 +41,7 @@
 
   &__img {
     position: absolute;
-    bottom: 0;
+    bottom: -3.5%;
     left: 50%;
     transform: translateX(-50%);
   }
@@ -48,7 +51,6 @@
     border-bottom-right-radius: rem(20);
     border-bottom-left-radius: rem(20);
     background-color: var(--white);
-    // outline: rem(1) solid firebrick;
   }
 
   &__name {
@@ -126,7 +128,4 @@
     }
   }
 
-  @media screen and (width < 649.99px) {
-    width: auto;
-  }
 }
